config-single.yaml
apiVersion: v1
kind: Pod
metadata:
  name: single-env-pod
spec:
  containers:
    - name: test-container
      image: alpine
      command: ["sleep", "3600"]
