block-outbound.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-outbound
spec:
  podSelector:
    matchLabels:
      app: rogue 
  policyTypes:
  - Egress
